20240119 게시판, 고객센터 완료

--- a/Algo/src/main/webapp/resources/css/common.css
+++ b/Algo/src/main/webapp/resources/css/common.css
@@ -277,6 +277,7 @@ header{
     align-items: center;
     margin-bottom: 40px;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .pagging>div, .pages span{
