--- a/Algo/src/main/webapp/resources/css/mypage/myPage.css
+++ b/Algo/src/main/webapp/resources/css/mypage/myPage.css
@@ -20,7 +20,6 @@ main {
     margin: 5px auto;
 }
 
-
 /* 메인 페이지 */
 
 .mp_content_m_box {
@@ -51,7 +50,7 @@ main {
 .prBox1 hr {
     width: 720px;
     margin: 10px 10px;
-    color: #D9D9D9;
+    color: #d9d9d9;
 }
 .prBox2 {
     border: 1px solid gray;
@@ -93,7 +92,7 @@ main {
     position: relative;
     top: -10px;
     right: 0px;
-    border-bottom: 1px #D9D9D9 solid;
+    border-bottom: 1px #d9d9d9 solid;
 }
 
 .pr_more a {
@@ -141,17 +140,16 @@ main {
 .lm_search_bar {
     width: 760px;
     height: 50px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
     border-radius: 10px;
     margin: auto;
-
 }
 
 .lm_table {
     width: 800px;
     margin-top: 30px;
     padding: 20px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
 }
 
 .table_title {
@@ -161,7 +159,7 @@ main {
 }
 .lm_tr {
     width: 780px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
 }
 
 .lm_td {
@@ -169,7 +167,7 @@ main {
     height: 45px;
     display: inline-flex;
     justify-content: space-between;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
     border-radius: 5px;
     padding: 10px;
     font-size: 18px;
@@ -180,7 +178,7 @@ main {
 .lm_rs {
     width: 740px;
     height: 300px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
     border-radius: 10px;
     margin-top: 15px;
 }
@@ -190,7 +188,6 @@ main {
     font-size: 45px;
     font-weight: 500;
     margin-left: 260px;
-
 }
 #lm_p1 {
     padding: 30px 200px;
@@ -201,7 +198,7 @@ main {
     padding-left: 500px;
     margin-top: 30px;
     font-size: 20px;
-    position:absolute;
+    position: absolute;
 }
 
 #lm_search_input {
@@ -213,8 +210,8 @@ main {
 }
 
 #lm_btn1 {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     background-color: #fff;
     border: none;
     margin: auto;
@@ -238,7 +235,7 @@ main {
 .local_board {
     width: 800px;
     height: 550px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
 }
 
 .ls_title {
@@ -247,7 +244,7 @@ main {
     height: 45px;
     padding: 15px;
     font-size: 18px;
-    border-bottom: 1px solid #D9D9D9;
+    border-bottom: 1px solid #d9d9d9;
 }
 
 .ls_tr {
@@ -269,8 +266,8 @@ main {
     margin-left: 25px;
     width: 720px;
     height: 50px;
-    border-top: 1px solid #D9D9D9;
-    border-bottom: 1px solid #D9D9D9;
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
     border-left: none;
     border-right: none;
     padding-left: 15px;
@@ -303,13 +300,19 @@ main {
     float: left;
     padding: 25px;
 }
+
+#q_hr {
+    color: #d9d9d9;
+}
+
 .qs_board {
     width: 780px;
     height: 500px;
     margin: 40px;
     border-radius: 5px;
     padding: 30px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
+    margin-bottom: 0px;
 }
 
 .cBox {
@@ -333,7 +336,7 @@ main {
 #q_content {
     width: 700px;
     height: 350px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
     resize: none;
     font-size: 20px;
     margin-top: 15px;
@@ -343,15 +346,13 @@ main {
 #q_btn1 {
     width: 140px;
     height: 40px;
-    float: right;
-    margin-right: 20px;
-    margin-top: 2px;
+    margin-left: 330px;
+    margin-top: 15px;
     background-color: #004591;
     color: #fff;
     border: none;
     border-radius: 5px;
 }
-
 
 /* 프로필 관리 */
 .mp_ps_box {
@@ -384,7 +385,7 @@ main {
 .pr_put1 {
     width: 240px;
     height: 50px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
     border-radius: 10px;
     padding-left: 10px;
 }
@@ -393,7 +394,7 @@ main {
     width: 370px;
     height: 50px;
     padding-left: 10px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
     border-radius: 10px;
 }
 
@@ -417,7 +418,6 @@ main {
     font-size: 15px;
     text-align: center;
     border: none;
-    
 }
 
 /* 1 : 1 문의 내역 */
@@ -434,7 +434,6 @@ main {
     background-color: #ffffff;
     float: right;
     padding: 30px;
-    
 }
 .iql_content_box h3 {
     font-size: 25px;
@@ -444,8 +443,8 @@ main {
 
 .iql_board {
     width: 770px;
-    height: 540px;
-    border: 1px solid #D9D9D9;
+    height: 480px;
+    border: 1px solid #d9d9d9;
     padding: 20px 50px 40px 50px;
 }
 
@@ -462,8 +461,8 @@ main {
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
-    border-top: 1px solid #D9D9D9;
-    border-bottom: 1px solid #D9D9D9;
+    padding-top: 30px;
+    border-top: 1px solid #d9d9d9;
 }
 
 .iql_board_dm {
@@ -471,8 +470,7 @@ main {
     height: 25px;
     display: inline-flex;
     justify-content: space-between;
-    padding-top: 22px;
-    padding-bottom: 22px;
+    margin-bottom: 30px;
 }
 .iql_board_dmT {
     float: left;
@@ -491,10 +489,10 @@ main {
 }
 
 #iq_log_p {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 /* 문의하기 버튼 */
-#iqlQG{
+#iqlQG {
     float: right;
     margin: -55px 0px 10px 0px;
     width: 100px;
@@ -517,8 +515,8 @@ main {
     align-items: center;
     gap: 10px;
     border-radius: 5px;
-    background: #FFC300;
-    color: #004591;
+    background: #ffc300;
+    color: #fff;
     font-size: 10px;
     border: none;
 }
@@ -538,7 +536,6 @@ main {
     font-size: 10px;
     border: none;
 }
-
 
 /* 1:1 문의 상세 */
 
@@ -562,7 +559,7 @@ main {
 .iq_board {
     width: 780px;
     height: 500px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
     padding: 30px;
 }
 .board_title {
@@ -575,14 +572,13 @@ main {
     height: 200px;
     margin-top: 10px;
     padding-top: 10px;
-    border-top: 1px solid #D9D9D9;
+    border-top: 1px solid #d9d9d9;
 }
-
 
 .iq_response {
     width: 720px;
     height: 170px;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
     border-radius: 5px;
     padding: 10px;
 }
@@ -608,7 +604,7 @@ main {
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    background: #D9D9D9;
+    background: #d9d9d9;
     color: #ffffff;
     font-size: 10px;
     border: none;
@@ -635,15 +631,16 @@ main {
     border-spacing: 0px;
     padding-left: 10px;
     padding-right: 10px;
+    margin-top: -5px;
 }
 
 .w_dm_t {
     display: inline-block;
     width: 760px;
     height: 50px;
-    background-color: #F4F6F9;
-    border-top: 1px solid #D9D9D9;
-    border-bottom: 1px solid #D9D9D9;
+    background-color: #f4f6f9;
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
     font-size: 15px;
     padding: 15px;
 }
@@ -656,19 +653,19 @@ main {
     height: 48px;
     background-color: #ffffff;
     position: relative;
-    border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9;
 }
 
 .w_dm_d td {
     height: 48px;
     max-width: 360px;
     float: left;
-    padding: 15px 4px;
+    padding: 10px 4px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     text-align: center;
-    border-bottom: 1px solid #D9D9D9;
+    border-bottom: 1px solid #d9d9d9;
 }
 
 .w_dm_cb {
@@ -689,7 +686,6 @@ main {
 #wc_cb {
     width: 16px;
     height: 16px;
-
 }
 .wc_btn1 {
     float: right;
@@ -704,7 +700,7 @@ main {
     gap: 10px;
 }
 
-.wc_btn2{
+.wc_btn2 {
     float: right;
     width: 70px;
     height: 25px;
@@ -713,7 +709,7 @@ main {
     border-radius: 3px;
     text-align: center;
     border: none;
-    margin: -65px 40px 20px 0px;
+    margin: -55px 60px 0px 0px;
 }
 /* 작성한 기업 리뷰 고유 */
 .w_dm_rs {
@@ -723,30 +719,30 @@ main {
 /* 별점 */
 
 .star_rating {
-    width: 100%; 
-    box-sizing: border-box; 
-    display: inline-flex; 
+    width: 100%;
+    box-sizing: border-box;
+    display: inline-flex;
     float: left;
-    flex-direction: row; 
+    flex-direction: row;
     justify-content: flex-start;
 }
 .w_dm_rs .star {
-    width: 25px; 
-    height: 25px; 
-    margin-right: 10px;
-    display: inline-block; 
-    background: url('/Algo/icon/star_empty.png') no-repeat; 
-    background-size: 100%; 
-    box-sizing: border-box; 
-}
-.w_dm_rs .star.on {
-    width: 25px; 
+    width: 25px;
     height: 25px;
     margin-right: 10px;
-    display: inline-block; 
-    background: url('/Algo/icon/star_on.png') no-repeat;
-    background-size: 100%; 
-    box-sizing: border-box; 
+    display: inline-block;
+    background: url("/Algo/icon/star_empty.png") no-repeat;
+    background-size: 100%;
+    box-sizing: border-box;
+}
+.w_dm_rs .star.on {
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+    display: inline-block;
+    background: url("/Algo/icon/star_on.png") no-repeat;
+    background-size: 100%;
+    box-sizing: border-box;
 }
 
 .star_box {
@@ -754,7 +750,7 @@ main {
     box-sizing: border-box;
     display: inline-block;
     margin: 15px 0;
-    background: #F3F4F8;
+    background: #f3f4f8;
     border: 0;
     border-radius: 10px;
     height: 100px;
