1/23 페이징처리 완성, 목록 불러오기 진행중

--- a/Algo/src/main/webapp/resources/css/common.css
+++ b/Algo/src/main/webapp/resources/css/common.css
@@ -290,6 +290,18 @@ span.active{
     color:#131313;
 }
 
+.pagging button{
+	background-color: #fff;
+	border: none;
+	margin: 0 5px;
+	color: #C0C0C0;
+	cursor: pointer;
+}
+
+.pagging button:disabled{
+	color:#131313;
+}
+
 
 /* 푸터 */
 footer{
