--- a/Algo/src/main/webapp/resources/css/companyReview/list.css
+++ b/Algo/src/main/webapp/resources/css/companyReview/list.css
@@ -1,7 +1,6 @@
 /* 2. 검색 */
 .Review_CoSh{
     margin-top: 40px;
-    width: 1100px;
     height: 40px;
 }
 
@@ -43,6 +42,7 @@ select {
     padding:0 10px;
     color: #949494;
     position: relative;
+    margin-top:-40px;
     background:url('https://i.ibb.co/N9HPzF3/list-arrow.png') no-repeat 91% 50%/12px auto;
 }
 
