--- a/Algo/src/main/webapp/resources/css/board/talkPost.css
+++ b/Algo/src/main/webapp/resources/css/board/talkPost.css
@@ -21,6 +21,36 @@ td {
     height: 50px;
 }
 
+textarea {
+	width: 1000px;
+	height: 100px;
+	padding: 10px;
+	margin: 20px;
+	resize: none;
+	border: 1px solid #C0C0C0;
+}
+
+.algo_btn3{
+    width: 102px;
+    height: 35px;
+    padding: 7px 20px;
+    border-radius: 5px;
+    border:1px solid #004591;
+    background: #fff;
+    box-sizing: border-box;
+    color:#004591;
+    line-height: 1.2em;
+    cursor: pointer;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    float: right;
+}
+
+.algo_btn3 a{
+    color:#004591;
+}
+
+
 .write-h {
     width: 10%;
 }
