--- a/Algo/src/main/webapp/resources/css/mypage/myPage.css
+++ b/Algo/src/main/webapp/resources/css/mypage/myPage.css
@@ -462,6 +462,8 @@ main {
 #q_main_title {
     float: left;
     padding: 25px;
+    margin-left: 20px;
+    font-weight: bold;
 }
 
 #q_hr {
@@ -805,7 +807,9 @@ main {
 .w_content_box h3 {
     font-size: 25px;
     margin-bottom: 30px;
+    margin-left : 30px;
     font-weight: bold;
+    
 }
 
 .w_board_case {
