회원가입파트 / 비번,비번확인 오류메시지 출력, 아이디, 닉네임 중복검사 구현완료

--- a/Algo/src/main/webapp/resources/css/account/createAccount.css
+++ b/Algo/src/main/webapp/resources/css/account/createAccount.css
@@ -146,3 +146,12 @@ span{
     margin-left: 10px;
     height: 30px;
 }
+
+.hide {
+    display: none;
+}
+
+.notice{
+    font-size: 12px;
+    padding-left: 10px;
+}
